@@ -59,7 +59,12 @@ CONF.BARRIER_MEMORY_BUFFERING_POLICY = {:queuing_class => :PoolQueue}
 ##CONF.LOG_LEVEL = :DEBUG
 #CONF.LOG_LEVEL = :INFO
 ##CONF.LOG_IMPORT_NTIMES_POP = 10000
-CONF.LOG_IMPORT_NTIMES_POP = 1000
+CONF.LOG_IMPORT_NTIMES_POP = 10000
+
+##  CONF.PROCESSOR_MON_ON = true
+##  CONF.PROCESSOR_MON_INTERVAL = 60
+#CONF.PROCESSOR_MON_INTERVAL = 10
+##  CONF.PROCESSOR_MON_PSFORMAT = "stat,vsz,rss,sz,pmem,pcpu,nlwp,time,wchan"
 
 ##CONF.USE_RESOLV_REPLACE = false
 
